@@ -4,6 +4,7 @@ sensord (0.7.0) unstable; urgency=low
   * Fixed coverity defects
   * Improved sensorfw examples
   * Changed DbusEmitter to DataEmitter
+  * Changed emitToDbus to emitData
 
   [Antti Virtanen]
   * Removed possibility of having multiple sensors inside single DeviceAdaptor. This feature was never used.
